# opensn

./: .gitignore  CMakeLists.txt
cmake/: FindOpenFOAM.cmake
framework/mesh/io/: foam_io.cc  mesh_io.h
framework/mesh/mesh_generator/: from_file_mesh_generator.cc
modules/linear_boltzmann_solvers/discrete_ordinates_problem/sweep_chunks/: aah_sweep_chunk.cc  aah_sweep_chunk.h  aah_sweep_chunk_n6.cc
modules/linear_boltzmann_solvers/lbs_problem/: lbs_problem.cc  lbs_problem.h
modules/linear_boltzmann_solvers/lbs_problem/postprocessors/: reaction_rate_postprocessor.cc  reaction_rate_postprocessor.h  volume_postprocessor.cc  volume_postprocessor.h
python/lib/: post.cc  solver.cc
test/assets/mesh/Godiva_SN/0/neutroRegion/: defaultFlux  defaultFlux2
test/assets/mesh/Godiva_SN/0/uniform/: reactorState
test/assets/mesh/Godiva_SN/constant/polyMesh/: boundary  cellZones  faces  neighbour  owner  points
test/assets/mesh/Godiva_SN/system/: controlDict  decomposeParDict  fvSchemes  fvSolution
test/python/modules/linear_boltzmann_solvers/transport_keigen/: heu_met_fast_001.py  tests.json  xs_godiva_g23.xs
test/python/modules/linear_boltzmann_solvers/transport_steady/: reed_test_rr_field_func.py  tests.json
tutorials/MyTutorials/: EIRBench1Mesh.lua  fuel.mgxs  water.mgxs
tutorials/MyTutorials/EIR1/: water.mgxs
tutorials/MyTutorials/neacrp1_4/: Hexagon.py  Hexagon_v2.py
